# vipin-council

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.cmd  vc.py
backend/: config.py  main.py
backend/council/: orchestrator.py  session.py
backend/engine/: self_refine.py  smart_router.py  task_decomposer.py  tree_of_thoughts.py
backend/memory/: shared_memory.py  tracker.py
backend/protocols/: base.py  consensus_protocol.py  council_protocol.py  debate_protocol.py  redteam_protocol.py  specialist_protocol.py  tournament_protocol.py
backend/providers/: router.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatPane.css  ChatPane.jsx  ResultView.css  ResultView.jsx  Sidebar.css  Sidebar.jsx
